--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&family=Roboto:wght@100;300;500;700&display=swap');
+
+  *{
+    font-family: 'Poppins', sans-serif;
+  }
 .intro img{
-    height: 160px;
-    width:160px;
+    height: 180px;
+    width:180px;
 }
 ul li{
 list-style: none;
