--- a/style.css
+++ b/style.css
@@ -52,4 +52,42 @@ span{
     padding-right: 20px;
     margin-right: 20px;;
   }
- 
+  .contact{
+    max-width:800px;
+    margin:5px auto;
+    position: relative;
+    box-shadow: 0 10px 30px 0px rgba(0,0,0,0.1);
+    padding:30px;
+  }
+ .contact_form .form-field{
+  position: relative;
+  margin:25px 0px;
+ }
+ .contact_form .input-text{
+  display: block;
+  width:100%;
+  border-width: 0px 0px 3px 0px;
+  border-color: black;
+  line-height: 26px;
+  font-size: 18px;
+ }
+ .contact_form .input-text:focus + .label,
+ .contact_form .input-text.not-empty + .label{
+  transform:translateY(-24px);
+ }
+ .contact_form .input-text:focus{
+  outline: none;
+ }
+ .contact_form .label{
+  position:absolute;
+  left:20px;
+  bottom:11px;
+  font-size: 16px;
+  line-height: 26px;
+  transition: transform 0.2s ease-in-out;
+ }
+ .contact_form .form-field .submit-btn{
+  display: inline-block;
+  padding:8px 16px;
+  cursor: pointer;
+ }
