--- a/style.css
+++ b/style.css
@@ -54,26 +54,29 @@ span{
   }
   .contact{
     max-width:800px;
-    margin:5px auto;
+    margin:50px auto;
     position: relative;
-    box-shadow: 0 10px 30px 0px rgba(0,0,0,0.1);
+    box-shadow: 0 10px 30px 0px rgba(0,0,0,0.5);
     padding:30px;
   }
  .contact_form .form-field{
   position: relative;
-  margin:25px 0px;
+  margin:32px 0px;
  }
  .contact_form .input-text{
   display: block;
+  margin-left: 5px;
   width:100%;
+  height: 36px;
   border-width: 0px 0px 3px 0px;
   border-color: black;
+  font-size: 14px;
   line-height: 26px;
-  font-size: 18px;
+  font-weight:400;
  }
  .contact_form .input-text:focus + .label,
  .contact_form .input-text.not-empty + .label{
-  transform:translateY(-24px);
+  transform:translateY(-26px);
  }
  .contact_form .input-text:focus{
   outline: none;
@@ -81,7 +84,7 @@ span{
  .contact_form .label{
   position:absolute;
   left:20px;
-  bottom:11px;
+  bottom:55px;
   font-size: 16px;
   line-height: 26px;
   transition: transform 0.2s ease-in-out;
@@ -91,3 +94,10 @@ span{
   padding:8px 16px;
   cursor: pointer;
  }
+
+ .error-text {
+  color: red;
+  font-size: 12px;
+  margin-top: 5px;
+  display: block;
+}
